AI-JADEDEVS4/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>RelaywareID__c</fullName>
        <externalId>true</externalId>
        <label>RelaywareID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <formula>Account.Renewal_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Renewal Date From the Account if contact status=customer</inlineHelpText>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reopen_Date__c</fullName>
        <label>Reopen Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reopen__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, then this contact has been reopened.</inlineHelpText>
        <label>Reopen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting__c</fullName>
        <label>Reporting</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue_Planning__c</fullName>
        <label>Revenue Planning</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Type (Archive)</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Adaptive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution_Not_a_Fit_Other__c</fullName>
        <description>The lead was disqualified due to the solution not being a fit and you have selected &quot;other&quot; as the option, please elaborate.</description>
        <inlineHelpText>The lead was disqualified due to the solution not being a fit and you have selected &quot;other&quot; as the option, please elaborate.</inlineHelpText>
        <label>Solution Not a Fit Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>This is used by SDRs to track the SDR lifecycle</inlineHelpText>
        <label>Contact Status</label>
        <picklist>
            <controllingField>Lifecycle_Stage__c</controllingField>
            <picklistValues>
                <fullName>Raw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pursuing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Surveys_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Surveys Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Alerts_and_Events_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Frame__c</fullName>
        <label>Time Frame</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - 6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 - 24 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Time Frame</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timestamp_Lifecycle_Customer__c</fullName>
        <label>Timestamp Lifecycle Customer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timestamp_Lifecycle_MAL__c</fullName>
        <label>Timestamp Lifecycle MAL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timestamp_Lifecycle_MQL__c</fullName>
        <label>Timestamp Lifecycle MQL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timestamp_Lifecycle_SAL__c</fullName>
        <label>Timestamp Lifecycle SAL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timestamp_Lifecycle_SAO__c</fullName>
        <label>Timestamp Lifecycle SAO</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timestamp_Lifecycle_SQL__c</fullName>
        <label>Timestamp Lifecycle SQL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timestamp_Lifecycle_SQO__c</fullName>
        <label>Timestamp Lifecycle SQO</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title_STD__c</fullName>
        <label>Title-STD</label>
        <picklist>
            <picklistValues>
                <fullName>CEO, President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP of Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director, Manager FP&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst, Business, Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAO, VP Accountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accountant, Director/Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Accountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIO, CTO, VP IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director, Manager IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COO, VP Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director, Manager Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP/Dir Sales, Sales Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner, Principal, Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Touches__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_Created_Date__c</fullName>
        <label>Trial Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Password__c</fullName>
        <label>Trial Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Request_Date__c</fullName>
        <description>timestamp automatically populated when Enterprise Trial checkbox (Enterprise_Trial__c) is marked true</description>
        <label>Trial Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Trial_Type__c</fullName>
        <label>Trial Type</label>
        <picklist>
            <picklistValues>
                <fullName>Populated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trial_Username__c</fullName>
        <label>Trial Username</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type(Archive2)</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <label>Unqualified Reason</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Solution Not A Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Is A Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer With Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not the right size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No CPM background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud CPM Competitor practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No GTM alignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products not complementary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Executive Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Contact_from_Lead_Convert__c</fullName>
        <description>Setting this field will cause other workflow rules to fire.</description>
        <label>Update Contact from Lead Convert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Groups_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Groups Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X15_Business_Days_From_SAL__c</fullName>
        <description>For use in email notifications</description>
        <formula>CASE(
MOD (DATEVALUE(Timestamp_Lifecycle_SAL__c) - DATE(1900, 1, 7), 7),
0, (Timestamp_Lifecycle_SAL__c) + 15 + FLOOR((15-1)/5)*2,
1, (Timestamp_Lifecycle_SAL__c) + 15 + FLOOR((15)/5)*2,
2, (Timestamp_Lifecycle_SAL__c) + 15 + FLOOR((15+1)/5)*2,
3, (Timestamp_Lifecycle_SAL__c) + 15 + FLOOR((15+2)/5)*2,
4, (Timestamp_Lifecycle_SAL__c) + 15 + FLOOR((15+3)/5)*2,
5, (Timestamp_Lifecycle_SAL__c) + 15 + CEILING(15/5)*2,
6, (Timestamp_Lifecycle_SAL__c) - IF(15&gt;0,1,0) + 15 + CEILING(15/5)*2,
null)</formula>
        <inlineHelpText>For use in email notifications</inlineHelpText>
        <label>15 Business Days From SAL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X20_Business_Days_From_SAL__c</fullName>
        <description>For use in email notifications</description>
        <formula>CASE(
MOD (DATEVALUE(Timestamp_Lifecycle_SAL__c) - DATE(1900, 1, 7), 7),
0, (Timestamp_Lifecycle_SAL__c) + 20 + FLOOR((20-1)/5)*2,
1, (Timestamp_Lifecycle_SAL__c) + 20 + FLOOR((20)/5)*2,
2, (Timestamp_Lifecycle_SAL__c) + 20 + FLOOR((20+1)/5)*2,
3, (Timestamp_Lifecycle_SAL__c) + 20 + FLOOR((20+2)/5)*2,
4, (Timestamp_Lifecycle_SAL__c) + 20 + FLOOR((20+3)/5)*2,
5, (Timestamp_Lifecycle_SAL__c) + 20 + CEILING(20/5)*2,
6, (Timestamp_Lifecycle_SAL__c) - IF(20&gt;0,1,0) + 20 + CEILING(20/5)*2,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For use in email notifications</inlineHelpText>
        <label>20 Business Days From SAL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X25_Business_Days_From_SAL__c</fullName>
        <description>For use in email notifications</description>
        <formula>CASE(
MOD (DATEVALUE(Timestamp_Lifecycle_SAL__c) - DATE(1900, 1, 7), 7),
0, (Timestamp_Lifecycle_SAL__c) + 25 + FLOOR((25-1)/5)*2,
1, (Timestamp_Lifecycle_SAL__c) + 25 + FLOOR((25)/5)*2,
2, (Timestamp_Lifecycle_SAL__c) + 25 + FLOOR((25+1)/5)*2,
3, (Timestamp_Lifecycle_SAL__c) + 25 + FLOOR((25+2)/5)*2,
4, (Timestamp_Lifecycle_SAL__c) + 25 + FLOOR((25+3)/5)*2,
5, (Timestamp_Lifecycle_SAL__c) + 25 + CEILING(25/5)*2,
6, (Timestamp_Lifecycle_SAL__c) - IF(25&gt;0,1,0) + 25 + CEILING(25/5)*2,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For use in email notifications</inlineHelpText>
        <label>25 Business Days From SAL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2_Business_Days_From_MQL__c</fullName>
        <formula>CASE(
MOD (DATEVALUE(Timestamp_Lifecycle_MQL__c) - DATE(1900, 1, 7), 7),
0, (Timestamp_Lifecycle_MQL__c) +  $Setup.Businessdays__c.Contact_Business_Days__c  + FLOOR(($Setup.Businessdays__c.Contact_Business_Days__c-1)/5)*2,
1, (Timestamp_Lifecycle_MQL__c) +  $Setup.Businessdays__c.Contact_Business_Days__c  + FLOOR(($Setup.Businessdays__c.Contact_Business_Days__c)/5)*2,
2, (Timestamp_Lifecycle_MQL__c) +  $Setup.Businessdays__c.Contact_Business_Days__c  + FLOOR(($Setup.Businessdays__c.Contact_Business_Days__c+1)/5)*2,
3, (Timestamp_Lifecycle_MQL__c) +  $Setup.Businessdays__c.Contact_Business_Days__c  + FLOOR(($Setup.Businessdays__c.Contact_Business_Days__c+2)/5)*2,
4, (Timestamp_Lifecycle_MQL__c) +  $Setup.Businessdays__c.Contact_Business_Days__c  + FLOOR(($Setup.Businessdays__c.Contact_Business_Days__c+3)/5)*2,
5, (Timestamp_Lifecycle_MQL__c) +  $Setup.Businessdays__c.Contact_Business_Days__c  + CEILING($Setup.Businessdays__c.Contact_Business_Days__c/5)*2,
6, (Timestamp_Lifecycle_MQL__c) - IF( $Setup.Businessdays__c.Contact_Business_Days__c &gt;0,1,0) +  $Setup.Businessdays__c.Contact_Business_Days__c  + CEILING( $Setup.Businessdays__c.Contact_Business_Days__c /5)*2,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2 Business Days From MQL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2_Business_Days_From_Reopen__c</fullName>
        <description>For sending notifications</description>
        <formula>CASE(
MOD (Reopen_Date__c - DATE(1900, 1, 7), 7),
0, (Reopen_Date__c) + 2 + FLOOR((2-1)/5)*2,
1, (Reopen_Date__c) + 2 + FLOOR((2)/5)*2,
2, (Reopen_Date__c) + 2 + FLOOR((2+1)/5)*2,
3, (Reopen_Date__c) + 2 + FLOOR((2+2)/5)*2,
4, (Reopen_Date__c) + 2 + FLOOR((2+3)/5)*2,
5, (Reopen_Date__c) + 2 + CEILING(2/5)*2,
6, (Reopen_Date__c) - IF(2&gt;0,1,0) + 2 + CEILING(2/5)*2,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2 Business Days From Reopen</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3_Business_Days_From_MQL__c</fullName>
        <formula>CASE(
MOD (DATEVALUE(Timestamp_Lifecycle_MQL__c) - DATE(1900, 1, 7), 7),
0, (Timestamp_Lifecycle_MQL__c) + 3 + FLOOR((3-1)/5)*2,
1, (Timestamp_Lifecycle_MQL__c) + 3 + FLOOR((3)/5)*2,
2, (Timestamp_Lifecycle_MQL__c) + 3 + FLOOR((3+1)/5)*2,
3, (Timestamp_Lifecycle_MQL__c) + 3 + FLOOR((3+2)/5)*2,
4, (Timestamp_Lifecycle_MQL__c) + 3 + FLOOR((3+3)/5)*2,
5, (Timestamp_Lifecycle_MQL__c) + 3 + CEILING(2/5)*2,
6, (Timestamp_Lifecycle_MQL__c) - IF(3&gt;0,1,0) + 3 + CEILING(3/5)*2,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3 Business Days From MQL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3_Business_Days_From_Reopen__c</fullName>
        <formula>CASE(
MOD (Reopen_Date__c - DATE(1900, 1, 7), 7),
0, (Reopen_Date__c) + 3 + FLOOR((3-1)/5)*2,
1, (Reopen_Date__c) + 3 + FLOOR((3)/5)*2,
2, (Reopen_Date__c) + 3 + FLOOR((3+1)/5)*2,
3, (Reopen_Date__c) + 3 + FLOOR((3+2)/5)*2,
4, (Reopen_Date__c) + 3 + FLOOR((3+3)/5)*2,
5, (Reopen_Date__c) + 3 + CEILING(3/5)*2,
6, (Reopen_Date__c) - IF(3&gt;0,1,0) + 3 + CEILING(3/5)*2,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3 Business Days From Reopen</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X5_Business_Days_From_Reopen__c</fullName>
        <formula>CASE(
MOD (Reopen_Date__c - DATE(1900, 1, 7), 7),
0, (Reopen_Date__c) + 5 + FLOOR((5-1)/5)*2,
1, (Reopen_Date__c) + 5 + FLOOR((5)/5)*2,
2, (Reopen_Date__c) + 5 + FLOOR((5+1)/5)*2,
3, (Reopen_Date__c) + 5 + FLOOR((5+2)/5)*2,
4, (Reopen_Date__c) + 5 + FLOOR((5+3)/5)*2,
5, (Reopen_Date__c) + 5 + CEILING(5/5)*2,
6, (Reopen_Date__c) - IF(5&gt;0,1,0) + 5 + CEILING(5/5)*2,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5 Business Days From Reopen</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X5_Business_Days_from_MQL__c</fullName>
        <formula>CASE(
MOD (DATEVALUE(Timestamp_Lifecycle_MQL__c) - DATE(1900, 1, 7), 7),
0, (Timestamp_Lifecycle_MQL__c) + 5 + FLOOR((5-1)/5)*2,
1, (Timestamp_Lifecycle_MQL__c) + 5 + FLOOR((5)/5)*2,
2, (Timestamp_Lifecycle_MQL__c) + 5 + FLOOR((5+1)/5)*2,
3, (Timestamp_Lifecycle_MQL__c) + 5 + FLOOR((5+2)/5)*2,
4, (Timestamp_Lifecycle_MQL__c) + 5 + FLOOR((5+3)/5)*2,
5, (Timestamp_Lifecycle_MQL__c) + 5 + CEILING(5/5)*2,
6, (Timestamp_Lifecycle_MQL__c) - IF(5&gt;0,1,0) + 5 + CEILING(5/5)*2,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5 Business Days from MQL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X90_Calendar_Days_From_SAL__c</fullName>
        <formula>CASE(
MOD (DATEVALUE(Timestamp_Lifecycle_SAL__c) - DATE(1900, 1, 7), 7),
0, (Timestamp_Lifecycle_SAL__c) + 90 + FLOOR((90-1)/5)*2,
1, (Timestamp_Lifecycle_SAL__c) + 90 + FLOOR((90)/5)*2,
2, (Timestamp_Lifecycle_SAL__c) + 90 + FLOOR((90+1)/5)*2,
3, (Timestamp_Lifecycle_SAL__c) + 90 + FLOOR((90+2)/5)*2,
4, (Timestamp_Lifecycle_SAL__c) + 90 + FLOOR((90+3)/5)*2,
5, (Timestamp_Lifecycle_SAL__c) + 90 + CEILING(90/5)*2,
6, (Timestamp_Lifecycle_SAL__c) - IF(90&gt;0,1,0) + 90 + CEILING(90/5)*2,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>90 Calendar Days From SAL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X92_Calendar_Days_From_SAL__c</fullName>
        <formula>CASE(
MOD (DATEVALUE(Timestamp_Lifecycle_SAL__c) - DATE(1900, 1, 7), 7),
0, (Timestamp_Lifecycle_SAL__c) + 92 + FLOOR((92-1)/5)*2,
1, (Timestamp_Lifecycle_SAL__c) + 92 + FLOOR((92)/5)*2,
2, (Timestamp_Lifecycle_SAL__c) + 92 + FLOOR((92+1)/5)*2,
3, (Timestamp_Lifecycle_SAL__c) + 92 + FLOOR((92+2)/5)*2,
4, (Timestamp_Lifecycle_SAL__c) + 92 + FLOOR((92+3)/5)*2,
5, (Timestamp_Lifecycle_SAL__c) + 92 + CEILING(92/5)*2,
6, (Timestamp_Lifecycle_SAL__c) - IF(92&gt;0,1,0) + 92 + CEILING(92/5)*2,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>92 Calendar Days From SAL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X96_Calendar_Days_From_SAL__c</fullName>
        <formula>CASE(
MOD (DATEVALUE(Timestamp_Lifecycle_SAL__c) - DATE(1900, 1, 7), 7),
0, (Timestamp_Lifecycle_SAL__c) + 96 + FLOOR((96-1)/5)*2,
1, (Timestamp_Lifecycle_SAL__c) + 96 + FLOOR((96)/5)*2,
2, (Timestamp_Lifecycle_SAL__c) + 96 + FLOOR((96+1)/5)*2,
3, (Timestamp_Lifecycle_SAL__c) + 96 + FLOOR((96+2)/5)*2,
4, (Timestamp_Lifecycle_SAL__c) + 96 + FLOOR((96+3)/5)*2,
5, (Timestamp_Lifecycle_SAL__c) + 96 + CEILING(96/5)*2,
6, (Timestamp_Lifecycle_SAL__c) - IF(96&gt;0,1,0) + 96 + CEILING(96/5)*2,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>96 Calendar Days From SAL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Status__c</fullName>
        <label>Last Sync Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Result__c</fullName>
        <label>Zendesk Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zendesk_OutofSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_oldTags__c</fullName>
        <label>Zendesk_oldTags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__isCreatedUpdatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in trigger to prevent looping of after insert and update. This flag is used to stop the contact that came for creation to get updated again thereby preventing the loop</description>
        <label>isCreatedUpdatedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__zendesk_id__c</fullName>
        <label>Zendesk User Id</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>business_Days__c</fullName>
        <formula>Timestamp_Lifecycle_MQL__c +$Setup.Businessdays__c.Contact_Business_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>business Days</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com__c</fullName>
        <description>Used by Data.com Prospector Reports</description>
        <formula>IF(OR(CONTAINS(TEXT(LeadSource),&quot;Jigsaw&quot;),CONTAINS(TEXT(LeadSource),&quot;Data.com&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eLearning_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This used to define if this contact will be used as the Group Admin in NetExam</description>
        <inlineHelpText>This used to define if this contact will be used as the Group Admin in NetExam</inlineHelpText>
        <label>eLearning Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iv__InsideView_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InsideView Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iv__InsideView_Date_Last_Updated__c</fullName>
        <label>InsideView Date Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iv__InsideView_User_Last_Updated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InsideView User Last Updated</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Close Score was last updated</description>
        <label>NeuralView: Close Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Close Score</description>
        <label>NeuralView: Close Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Contactability Score was last updated</description>
        <label>NeuralView: Contactability Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactScoreId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The InsideSales.com NeuralView Hourly Contactability Score Object Lookup</description>
        <label>NeuralView: Hourly Contactability ID</label>
        <referenceTo>qbdialer__ContactScore__c</referenceTo>
        <relationshipLabel>Contact Score Items_C</relationshipLabel>
        <relationshipName>Contact_Score_Items_C</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Contactability Score</description>
        <label>NeuralView: Contactability Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__LastCallTime__c</fullName>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.</description>
        <label>Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ResponseTime__c</fullName>
        <description>This field will store the number of seconds between record creation time and first call time (via the PowerDialer).</description>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Lifecycle_Stage__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Contacts</fullName>
        <columns>Status__c</columns>
        <columns>Contact_Status__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Renewal_Date__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Status__c</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Customer Success Group Contact List</label>
    </listViews>
    <listViews>
        <fullName>All_Customer_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Role__c</columns>
        <columns>Purchasing_Role__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Status__c</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>mcdonn</value>
        </filters>
        <label>McDonnell Customer Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>Calculated_Score__c</columns>
        <columns>Lead_Offer_Most_Recent__c</columns>
        <columns>Lead_Offer_Original__c</columns>
        <columns>Lead_Source_Most_Recent__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Rejected,Unqualified,Qualified,Unresponsive</value>
        </filters>
        <filters>
            <field>Calculated_Score__c</field>
            <operation>greaterThan</operation>
            <value>29</value>
        </filters>
        <label>My Contacts - Tony</label>
    </listViews>
    <listViews>
        <fullName>My_Active_Leads</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Owner__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Owner__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Contacted_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.DO_NOT_CALL</columns>
        <columns>CONTACT.EMAIL_OPT_OUT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Contacted</value>
        </filters>
        <label>My Contacted Contacts</label>
        <sharedTo>
            <group>SDR_Domestic</group>
            <group>SDR_International</group>
            <group>SalesDashboardGroup</group>
            <group>Sales_Development</group>
            <role>SDR</role>
            <role>SDR_1</role>
            <role>SDR_2</role>
            <role>SDR_3</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Account_Type__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Lead_Offer_Most_Recent__c</columns>
        <columns>Calculated_Score__c</columns>
        <columns>Contact_Status__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
</CustomObject>